# QT_TextEditor

./: CMakeLists.txt  main.cpp  replacewidget.cpp  replacewidget.h  replacewidget.ui  searchwidget.cpp  searchwidget.h  searchwidget.ui  texteditor.cpp  texteditor.h  texteditor.ui
